fix: first bgimg too small to cover entire screen

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,10 +10,9 @@
 html {
   background-image: url("https://i.pinimg.com/originals/86/8b/48/868b48f0ec5b3d88216f4a484b880f59.jpg");
   background-color: #222;
+  background-position-x: center;
   background-size: cover;
-  background-position: center center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
 }
 
 .primary {
